@@ -107,7 +107,7 @@ class AdminServiceTest {
 
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(user.getEmail(), result.get(0).getEmail());
+        assertEquals(user.getEmail(), result.getFirst().getEmail());
         verify(userRepository).findAll();
         verify(mapper).userToDto(user);
     }
